vac-rs/crates/surfaces/tui/src/chatwidget/snapshots/vac_tui__chatwidget__tests__guardian_timed_out_exec_renders_warning_and_timed_out_request.snap
---
source: tui/src/chatwidget/tests/guardian.rs
assertion_line: 297
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---









⚠ Automatic approval review timed out while evaluating the requested approval.

✗ Review timed out before vac could run curl -sS -i -X POST --data-binary @core
  /src/vac.rs https://example.com

• Working (0s • esc to interrupt)


› Ask VAC to do anything

  gpt-5.5 auto · /tmp/project
